# fplot

./: .gitignore  CLAUDE.md  fetch_data.py  fplot.mplstyle  main.py  pyproject.toml  visualize.py
.github/workflows/: update-fpl-data.yml
data/: 2425.csv  2526.csv  bootstrap.json  id.json
