[project]
name = "fplplot"
version = "0.1.0"
description = "Fantasy Premier League rank visualization tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.ruff.format]
docstring-code-format = true
